Добавлена поддержка датчика температуры

--- a/PIDHeaterController/platformio.ini
+++ b/PIDHeaterController/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-lib_deps = gyverlibs/GyverPID@^3.3
+lib_deps = 
+	gyverlibs/GyverPID@^3.3
+	milesburton/DallasTemperature@^3.11.0
