--- a/PIDHeaterController/platformio.ini
+++ b/PIDHeaterController/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	gyverlibs/EncButton@^2.0
